# quick_llama

./: .gitignore  README.md  pyproject.toml  sbatch_quick_llama.sh  train_wrapper.py
code/: __init__.py  ds_pipeline.py  model_arch.py  parser.py  trainable_llama.py  trainer.py  wrap_model.py  wrapper_train.py
src/: config.py  evaluate.py  logger.py  minimal_training_example.py  model_utils.py  train.py
src/models/: model_arch.py  model_utils.py  trainable_llama.py
src/quick_llama/: cache.py  config.py  data_utils.py  eleuther_adapter.py  evaluate.py  minimal_training_example.py  model_utils.py  packer_batcher.py  train.py  utils.py
src/quick_llama.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quick_llama/models/: model_arch.py  model_utils.py  rotary.py  trainable_llama.py  triton_rotary.py
src/tests/: test_model_arch.py
src/training/: trainer.py  wrap_model.py
src/utils/: packer_batcher.py  parser.py
