[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Updated project name
name = "quick-llama"
version = "0.1.0"
# Updated description based on Quick Llama README
description = "An efficient and flexible implementation of Llama 3.2 1B."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "samblouir", email = "sblouir@gmu.edu" },
]
maintainers = [
    { name = "samblouir", email = "sblouir@gmu.edu" }
]
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0",
    "triton>=3.1", # Needed for efficient kernels (RoPE and RMSNorm)
    "transformers>=4.40", # For HF model interaction, weight loading
    "huggingface-hub>=0.20", # For downloading models/weights
    "lm-eval>=0.4",      # For LM Harness evaluation support
    "accelerate>=1.6", # Used as a great convenience wrapper for torch DDP
	"cut-cross-entropy @ git+https://github.com/unslothai/cut-cross-entropy",
]

# Classifiers remain largely the same, suitable for ML projects
classifiers = [
    "Development Status :: 3 - Alpha", # Given TODOs
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux", # Common for this type of development
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/samblouir/quick_llama"
Repository = "https://github.com/samblouir/quick_llama"
Issues = "https://github.com/samblouir/quick_llama/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# Kept pytest for development/testing
dev = [
    "pytest",
]